# xbg

./: Makefile  README.md  pyproject.toml  xbg.py
bgi/: __init__.py  __main__.py  core.py
