[tool.poetry]
name = "niahcloot.bgi"
version = "0.1.0"
description = "A background image maniplulation tool"
authors = ["mental <m3nta1@yahoo.com>"]

[tool.poetry.scripts]
bgi = 'niahcloot.bgi:__main__.main'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
