[tool.poetry]
name = "xbg"
version = "0.2.0"
description = "A background image maniplulation tool"
authors = ["mental <m3nta1@yahoo.com>"]

[tool.poetry.scripts]
xbg = 'xbg:main'

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
